<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/MVP"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/UserInput1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/number_1"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/UserInput2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/UserInput2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/number_2"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/UserInput1"
        app:layout_constraintBottom_toTopOf="@id/Results"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/Results"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/results"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/UserInput2"
        app:layout_constraintBottom_toTopOf="@id/addBut"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/addBut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        app:layout_constraintTop_toBottomOf="@id/Results"
        app:layout_constraintBottom_toTopOf="@id/subBut"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/subBut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sub"
        app:layout_constraintTop_toBottomOf="@id/addBut"
        app:layout_constraintBottom_toTopOf="@id/multiBut"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/multiBut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multi"
        app:layout_constraintTop_toBottomOf="@id/subBut"
        app:layout_constraintBottom_toTopOf="@id/divBut"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/divBut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/div"
        app:layout_constraintTop_toBottomOf="@id/multiBut"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
